--- a/astra_camera/CMakeLists.txt
+++ b/astra_camera/CMakeLists.txt
@@ -6,9 +6,9 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
 set(CMAKE_BUILD_TYPE "Debug")
-if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
-endif()
+endif ()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
@@ -17,6 +17,7 @@ find_package(ament_index_cpp REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(builtin_interfaces REQUIRED)
 find_package(cv_bridge REQUIRED)
+find_package(camera_info_manager REQUIRED)
 find_package(glog REQUIRED)
 find_package(image_transport REQUIRED)
 find_package(image_publisher REQUIRED)
@@ -25,6 +26,7 @@ find_package(OpenCV REQUIRED)
 find_package(astra_camera_msgs REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_components REQUIRED)
+find_package(rcutils REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(std_srvs REQUIRED)
@@ -54,7 +56,9 @@ set(ORBBEC_OPENNI2_REDIST
   "${CMAKE_CURRENT_SOURCE_DIR}/openni2_redist/${HOST_PLATFORM}")
 
 add_library(${PROJECT_NAME} SHARED
+  src/device_listener.cpp
   src/dynamic_params.cpp
+  src/ob_camera_info.cpp
   src/ob_frame_listener.cpp
   src/ob_camera_node_factory.cpp
   src/ob_camera_node.cpp
@@ -69,12 +73,14 @@ set(dependencies
   ament_index_cpp
   builtin_interfaces
   cv_bridge
+  camera_info_manager
   Eigen3
   image_transport
   image_publisher
   astra_camera_msgs
   rclcpp
   rclcpp_components
+  rcutils
   sensor_msgs
   std_msgs
   std_srvs
@@ -132,7 +138,7 @@ install(DIRECTORY
   params
   DESTINATION share/${PROJECT_NAME}/
   )
-if(BUILD_TESTING)
+if (BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
   # uncomment the line when a copyright and license is not present in all source files
@@ -141,7 +147,7 @@ if(BUILD_TESTING)
   # uncomment the line when this package is not in a git repo
   #set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
-endif()
+endif ()
 ament_export_include_directories(include)
 ament_export_libraries(${PROJECT_NAME})
 ament_export_dependencies(${dependencies})
