--- a/astra_camera/package.xml
+++ b/astra_camera/package.xml
@@ -9,23 +9,25 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>ament_index_cpp</depend>
   <depend>ament_lint_auto</depend>
   <depend>ament_lint_common</depend>
-  <depend>ament_index_cpp</depend>
-  <depend>image_transport</depend>
-  <depend>image_publisher</depend>
-  <depend>rclcpp_components</depend>
-  <depend>cv_bridge</depend>
   <depend>astra_camera_msgs</depend>
   <depend>builtin_interfaces</depend>
+  <depend>class_loader</depend>
+  <depend>cv_bridge</depend>
+  <depend>image_geometry</depend>
+  <depend>image_publisher</depend>
+  <depend>image_transport</depend>
+  <depend>rclcpp_components</depend>
   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>std_srvs</depend>
-  <depend>tf2</depend>
+  <depend>tf2_msgs</depend>
   <depend>tf2_ros</depend>
   <depend>tf2_sensor_msgs</depend>
-  <depend>tf2_msgs</depend>
+  <depend>tf2</depend>
   <export>
     <build_type>ament_cmake</build_type>
   </export>
