--- a/astra_camera/params/halley_params.yaml
+++ b/astra_camera/params/halley_params.yaml
@@ -1,22 +1,22 @@
 /**:
   ros__parameters:
     color_width: 640
-    color_height: 480
+    color_height: 360
     color_fps: 30
     color_frame_id: "color_frame"
-    color_optical_frame_id: "color_optical_frame"
+    color_optical_frame_id: "camera_color_optical_frame"
     enable_color: true
     ir_width: 640
     ir_height: 480
     ir_fps: 30
     ir_frame_id: "ir_frame"
-    ir_optical_frame_id: "ir_optical_frame"
+    ir_optical_frame_id: "camera_ir_optical_frame"
     enable_ir: true
     depth_width: 640
-    depth_height: 480
+    depth_height: 360
     depth_fps: 30
     depth_frame_id: "depth_frame"
-    depth_optical_frame_id: "depth_optical_frame"
+    depth_optical_frame_id: "camera_depth_optical_frame"
     enable_depth: true
     publish_tf: true
     tf_publish_rate: 10.0
@@ -28,6 +28,6 @@
     uvc_camera:
       enable: true
       width: 640
-      height: 480
+      height: 360
       fps: 30
       format: "mjpeg"
