--- a/astra_camera/params/astra_mini_params.yaml
+++ b/astra_camera/params/astra_mini_params.yaml
@@ -11,7 +11,7 @@
     ir_fps: 30
     ir_frame_id: "ir_frame"
     ir_optical_frame_id: "ir_optical_frame"
-    enable_ir: false
+    enable_ir: false # NOTE: can not enable both IR && COLOR
     depth_width: 640
     depth_height: 480
     depth_fps: 30
