--- a/astra_camera/params/astra_mini_params.yaml
+++ b/astra_camera/params/astra_mini_params.yaml
@@ -3,20 +3,20 @@
     color_width: 640
     color_height: 480
     color_fps: 30
-    color_frame_id: "color_frame"
-    color_optical_frame_id: "color_optical_frame"
+    color_frame_id: "camera_color_frame"
+    color_optical_frame_id: "camera_optical_color_frame"
     enable_color: true
     ir_width: 640
     ir_height: 480
     ir_fps: 30
-    ir_frame_id: "ir_frame"
-    ir_optical_frame_id: "ir_optical_frame"
+    ir_frame_id: "camera_ir_frame"
+    ir_optical_frame_id: "camera_optical_ir_frame"
     enable_ir: false # NOTE: can not enable both IR && COLOR
     depth_width: 640
     depth_height: 480
     depth_fps: 30
     depth_frame_id: "depth_frame"
-    depth_optical_frame_id: "depth_optical_frame"
+    depth_optical_frame_id: "camera_optical_ir_frame"
     enable_depth: true
     publish_tf: true
     tf_publish_rate: 10.0
