--- a/astra_camera/params/astra_pro_params.yaml
+++ b/astra_camera/params/astra_pro_params.yaml
@@ -1,22 +1,16 @@
 /**:
   ros__parameters:
-    color_width: 640
-    color_height: 480
-    color_fps: 30
-    color_frame_id: "color_frame"
-    color_optical_frame_id: "color_optical_frame"
-    enable_color: true
     ir_width: 640
     ir_height: 480
     ir_fps: 30
-    ir_frame_id: "ir_frame"
-    ir_optical_frame_id: "ir_optical_frame"
+    ir_frame_id: "camera_ir_frame"
+    ir_optical_frame_id: "camera_ir_optical_frame"
     enable_ir: true # NOTE: can not enable both IR && COLOR
     depth_width: 640
     depth_height: 480
     depth_fps: 30
-    depth_frame_id: "depth_frame"
-    depth_optical_frame_id: "depth_optical_frame"
+    depth_frame_id: "camera_depth_frame"
+    depth_optical_frame_id: "camera_optical_depth_frame"
     enable_depth: true
     publish_tf: true
     tf_publish_rate: 10.0
@@ -33,3 +27,5 @@
       format: "mjpeg"
       vid : 0x2bc5
       pid : 0x0501
+      color_frame_id: "camera_color_frame"
+      color_optical_frame_id: "camera_optical_color_frame"
