--- a/astra_camera/params/multi_camera/halley1_params.yaml
+++ b/astra_camera/params/multi_camera/halley1_params.yaml
@@ -1,22 +1,16 @@
 /camera/camera1:
   ros__parameters:
-    color_width: 640
-    color_height: 360
-    color_fps: 30
-    color_frame_id: "camera1_color_frame"
-    color_optical_frame_id: "camera1_color_optical_frame"
-    enable_color: true
     ir_width: 640
     ir_height: 480
     ir_fps: 30
     ir_frame_id: "camera1_ir_frame"
-    ir_optical_frame_id: "camera1_ir_optical_frame"
+    optical_ir_frame_id: "camera1_optical_ir_frame"
     enable_ir: true
     depth_width: 640
     depth_height: 360
     depth_fps: 30
     depth_frame_id: "camera1_depth_frame"
-    depth_optical_frame_id: "camera1_depth_optical_frame"
+    optical_depth_frame_id: "camera1_optical_depth_frame"
     enable_depth: true
     publish_tf: true
     tf_publish_rate: 10.0
@@ -24,12 +18,14 @@
     depth_registration: true
     serial_number: "CH2PB10004T"
     camera_link_frame_id: "camera1_link"
-    number_of_devices : 2
+    number_of_devices: 2
     uvc_camera:
       enable: true
       width: 640
       height: 360
       fps: 30
       format: "mjpeg"
-      vid : 0x2bc5
-      pid : 0x0559
+      vid: 0x2bc5
+      pid: 0x0559
+      color_frame_id: "camera1_color_frame"
+      optical_color_frame_id: "camera1_optical_color_frame"
