--- a/astra_camera/params/dabai_dw_params.yaml
+++ b/astra_camera/params/dabai_dw_params.yaml
@@ -15,6 +15,6 @@
     publish_tf: true
     tf_publish_rate: 10.0
     reconnect_timeout: 6.0
-    depth_registration: true
+    depth_align: false
     serial_number: ""
     camera_link_frame_id: "camera_link"
