--- a/astra_camera/params/camera_params_template.yaml
+++ b/astra_camera/params/camera_params_template.yaml
@@ -1,18 +1,18 @@
 # 参数设置模板
 camera_name : "camera" # # 相机名字（唯一）
 color_width: 640 # RGB宽
-color_height: 400 # RGB高
+color_height: 480 # RGB高
 color_fps: 30 # RGB帧率
 enable_color: true #  RGB开关
 
 # IR相机宽/高/帧率 | IR camera width/height/FPS
 ir_width: 640 
-ir_height: 400
+ir_height: 480
 ir_fps: 30
-enable_ir: true
+enable_ir: false
 # 深度 相机宽/高/帧率 | depth camera width/height/FPS
 depth_width: 640
-depth_height: 400
+depth_height: 480
 depth_fps: 30
 enable_depth: true
 
