--- a/astra_camera/params/dabai_dcw_params.yaml
+++ b/astra_camera/params/dabai_dcw_params.yaml
@@ -1,18 +1,18 @@
 # 参数设置模板
 camera_name : "camera" # # 相机名字（唯一）
 color_width: 640 # RGB宽
-color_height: 400 # RGB高
+color_height: 480 # RGB高
 color_fps: 30 # RGB帧率
 enable_color: true #  RGB开关
 
 # IR相机宽/高/帧率 | IR camera width/height/FPS
 ir_width: 640 
-ir_height: 400
+ir_height: 480
 ir_fps: 30
 enable_ir: true
 # 深度 相机宽/高/帧率 | depth camera width/height/FPS
 depth_width: 640
-depth_height: 400
+depth_height: 480
 depth_fps: 30
 enable_depth: true
 
@@ -22,10 +22,10 @@ depth_align: false
 serial_number: ""
 number_of_devices: 1
 # UVC 相机，目前只有 dabai, dabi DCW 需要 | UVC camera , only for dabai , dabai DCW serial
-uvc_camera.enable: false
+uvc_camera.enable: true
 uvc_camera.format: "mjpeg"
-uvc_camera.vid: 0x0
-uvc_camera.pid: 0x0
+uvc_camera.vid: 0x2bc5
+uvc_camera.pid: 0x0559
 # 打开相机可能失败，retry次数
 uvc_camera.retry_count: 100
 # 不同的分辨率对齐需要剪切和放大，所以需要设置ROI
