--- a/astra_camera/CMakeLists.txt
+++ b/astra_camera/CMakeLists.txt
@@ -186,6 +186,12 @@ install(DIRECTORY
   DESTINATION share/${PROJECT_NAME}/
   )
 
+
+install(DIRECTORY
+  rviz
+  DESTINATION share/${PROJECT_NAME}/
+  )
+
 if (BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
