add get camera params interface

--- a/astra_camera_msgs/CMakeLists.txt
+++ b/astra_camera_msgs/CMakeLists.txt
@@ -20,6 +20,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Metadata.msg"
   "srv/GetDeviceInfo.srv"
   "srv/GetCameraInfo.srv"
+  "srv/GetCameraParams.srv"
   "srv/GetInt32.srv"
   "srv/GetString.srv"
   "srv/SetInt32.srv"
