using default QoS

--- a/astra_camera/CMakeLists.txt
+++ b/astra_camera/CMakeLists.txt
@@ -20,11 +20,9 @@ find_package(camera_info_manager REQUIRED)
 find_package(class_loader REQUIRED)
 find_package(cv_bridge REQUIRED)
 find_package(Eigen3 REQUIRED)
-find_package(glog REQUIRED)
 find_package(image_geometry REQUIRED)
 find_package(image_publisher REQUIRED)
 find_package(image_transport REQUIRED)
-find_package(libuvc REQUIRED)
 find_package(magic_enum REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(rclcpp REQUIRED)
@@ -38,6 +36,17 @@ find_package(tf2_eigen REQUIRED)
 find_package(tf2_msgs REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_sensor_msgs REQUIRED)
+find_package(PkgConfig REQUIRED)
+pkg_search_module(LIBUVC REQUIRED libuvc)
+if (NOT LIBUVC_FOUND)
+  message(FATAL_ERROR "libuvc is not found")
+endif ()
+pkg_search_module(GLOG REQUIRED libglog)
+
+if (NOT GLOG_FOUND)
+  message(FATAL_ERROR "glog is not found")
+endif()
+
 
 execute_process(COMMAND uname -m OUTPUT_VARIABLE MACHINES)
 execute_process(COMMAND getconf LONG_BIT OUTPUT_VARIABLE MACHINES_BIT)
@@ -101,6 +110,9 @@ target_include_directories(${PROJECT_NAME} PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
   ${OpenCV_INCLUDED_DIRS}
+  ${LIBUVC_INCLUDE_DIRS}
+  ${LIBUVC_INCLUDE_DIRS}
+  ${GLOG__INCLUDE_DIRS}
   )
 
 ament_target_dependencies(${PROJECT_NAME}
@@ -109,9 +121,9 @@ ament_target_dependencies(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME}
   ${OpenCV_LIBS}
   Eigen3::Eigen
-  glog::glog
+  ${GLOG_LIBRARIES}
   magic_enum::magic_enum
-  LibUVC::UVCShared
+  ${LIBUVC_LIBRARIES}
   -lOpenNI2
   -L${ORBBEC_OPENNI2_REDIST}
   )
@@ -124,6 +136,8 @@ target_include_directories(list_devices_node PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
   ${OpenCV_INCLUDED_DIRS}
+  ${LIBUVC_INCLUDE_DIRS}
+  ${GLOG__INCLUDE_DIRS}
   )
 
 ament_target_dependencies(list_devices_node
@@ -132,9 +146,9 @@ ament_target_dependencies(list_devices_node
 target_link_libraries(list_devices_node
   ${OpenCV_LIBS}
   Eigen3::Eigen
-  glog::glog
+  ${GLOG_LIBRARIES}
   magic_enum::magic_enum
-  LibUVC::UVCShared
+  ${LIBUVC_LIBRARIES}
   -lOpenNI2
   -L${ORBBEC_OPENNI2_REDIST}
   ${PROJECT_NAME}
